# hacknu

./: .dockerignore  .gitignore  Dockerfile.agent  docker-compose.yml  pyproject.toml  requirements.txt
agent-v2/: docker-compose.dev.yml  docker-compose.yml
agent-v2/backend/: .dockerignore  Dockerfile  pyproject.toml
agent-v2/backend/agent_v2_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-v2/backend/app/: agent_service.py  do_close_json.py  llm_stream.py  logging_config.py  main.py  models_config.py  request_logging_middleware.py
agent-v2/backend/app/data/schemas/: working.json
agent-v2/backend/app/imagegen/: __init__.py  config.py  context_routes.py  pipeline.py  routes.py
agent-v2/backend/app/imagegen/context/static/: HiggsfieldIs.md
agent-v2/backend/app/imagegen/research_agent/: __init__.py  agent.py
agent-v2/backend/app/imagegen/scenario_agent/: agent.py
agent-v2/backend/app/imagegen/visual_agent/: __init__.py  agent.py
agent-v2/backend/app/prompt/: build_messages.py  build_system_prompt.py  flagged.py  focused_shape_names.py  get_model_name.py  get_system_prompt_flags.py  intro_section.py  response_schema.py  rules_section.py
agent-v2/backend/app/schemas/: agent_prompt.py
agent-v2/backend/data/imagegen_artifacts/8abe8903-0468-4c5d-a79a-7f6706f9a7ca/: scenario.json
agent-v2/backend/tests/: conftest.py  test_close_json.py  test_imagegen_routes.py  test_logging_config.py  test_prompt_golden.py
agent-v2/backend/tests/fixtures/: minimal_working_prompt.json
agent-v2/backend/tests/golden/: system_prompt_no_schema.txt
(+50 files in other folders)
