[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.6.0",
    "bedrock-agentcore-starter-toolkit>=0.3.4",
    "strands-agents>=1.34.1",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.3.0",
]
